<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backgr"
    android:layout_margin="@dimen/small_margin"
    app:cardCornerRadius="@dimen/medium_margin"
    app:cardElevation="@dimen/small_margin"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_buku"
            android:layout_width="190dp"
            android:layout_height="142dp"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            app:srcCompat="@drawable/default_book_cover" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul_buku"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_penulis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/penulis"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/tv_penerbit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/penerbit"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/tv_tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/tgl_terbit"
                android:textSize="@dimen/small_text" />




        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>